# LLMBridge-cpp

./: .gitignore  README.md
sdk/: CMakeLists.txt  CMakelists.txt  grpc_server.cc
sdk/include/: ChatSDK.h  DataManager.h  DeepSeekProvider.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  UUIDUtil.h  common.h  fields.h  logger.h
sdk/proto/: llm_bridge.proto
sdk/src/: ChatSDK.cc  DataManager.cc  DeepSeekProvider.cc  GeminiProvider.cc  LLMManager.cc  OllamaLLMProvider.cc  SessionManager.cc  UUIDUtil.cc  logger.cc
test/: CMakeLists.txt  log.cc  makefile  testLLM.cc
